--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -19,7 +19,7 @@ height:100%;
 }
 
 section{
-    margin-top: 20rem;
+    margin-top: 15rem;
 }
 
 header{
@@ -40,7 +40,7 @@ header{
    /* background-color: rgba(255, 255, 0, 0.708);*/
     max-width: 1450px;
     height: 60px;
-position: fixed;
+    position: fixed;
 }
 
 .navbar li {
@@ -80,9 +80,9 @@ position: fixed;
 }
 
 .navbar .logo{
+    border: 1px solid black;
 position: absolute;
  width: 5%;
- height: 100vh;
  top: 1rem;
 left: 43rem;
 }
@@ -101,16 +101,7 @@ section{
 section h1{
     font-size: 5rem;
 }
-h1::after{
-    content:""; 
-    position: absolute;  
-    background-color: black;
-    width: 100%;
-    max-width: var(--maxWidth);
-    height: 0.5px;
-    left: 1rem;
-    top: 5rem;
-}
+
 
 
 .home{
@@ -209,13 +200,19 @@ border-radius: 10px;
     font-size: 1.1rem;
     color: white;
   }
+  .portfolio-section .projet-container{
+   display: flex;
+   justify-content: space-between;
+   width: 100%;
 
+  }
 
 .portfolio-section .projet-container article{
-    width: 100%;
-    height: 300px;
+    width: 600px;
+    height: 500px;
     background-color: var(--bgc-principal);
     border-radius:15px; 
+
 }
 
 .portfolio-section{
@@ -245,6 +242,7 @@ border-radius: 10px;
     max-width: 1200px;
 }
 
+
 .grid{
    
  position:absolute; 
@@ -252,12 +250,14 @@ border-radius: 10px;
  left: -9rem;
  top: 1rem;   
  display:grid;
+ 
  grid-template-columns:repeat(2,400px); 
  justify-content:center;
  align-content: center;
  column-gap: 70px;
 
 }
+
 
 .grid::after{
    
@@ -294,7 +294,8 @@ border-radius: 10px;
     font-weight: 200;
     padding-top: 1rem;
 }
-.skills-grid{
+.skills-grid
+{
     border:1px solid  red;
     border: none;
     display: flex;
@@ -374,6 +375,9 @@ border-radius: 10px;
   width: 35%;
   font-weight: 200;
   font-size: 1.5rem;
+  margin-top: 1rem;
+  border-top: 0.5px solid white;
+  padding-top:1rem;  
 }
 .contact-mini p::after{
     content:"";
@@ -383,13 +387,14 @@ border-radius: 10px;
     border-top: 1px solid rgb(255, 255, 255);
     border-left: 1px solid rgb(255, 255, 255);
     width: 15px;
-    height: 15px;   
+    height: 15px;
+   
 }
   
 .contact-mini p::before{
     content:"";
     position:absolute; 
-    top: 12rem;
+    top: 14rem;
     left: 23.5rem;
     border-bottom: 1px solid rgb(255, 255, 255);
     border-right: 1px solid rgb(255, 255, 255);
@@ -397,10 +402,6 @@ border-radius: 10px;
     height: 15px;   
 }
   
-
-
-
-
 form{
     margin-left: 30rem;
     margin-top: -10rem;
@@ -461,3 +462,108 @@ form input:focus{
       color: rgb(255, 255, 255);
       font-size: 0.9rem;
   }
+
+
+.portfolio-section .menu-block{
+    background-color: var(--bgc-principal);
+    border-radius:var(--border-radius);
+    height: 400px;
+    max-width: 990px;
+}
+
+.menu-block .links-block{
+    position: absolute;
+    right: 45rem;
+    top: 10rem;
+}
+
+.links-block li{
+    list-style: none;
+}
+.links-block li::after{
+    position:absolute; 
+    content:"";
+    height:0.4px; 
+    width: 500px;
+    background-color: white;
+    left:1rem; 
+    margin-top: 3.5rem;
+ }
+ links-block li::before{
+    position:absolute; 
+    content:"";
+    height:0.4px; 
+    width: 500px;
+    background-color: white;
+    left:1rem; 
+    margin-top: 3.5rem;
+ }
+
+.links-block li a{
+    text-decoration: none;
+    color:white; 
+    font-size: 3.6rem;
+    font-weight: 500;
+}
+
+.numero{
+    position: absolute;
+    font-size:1rem;  
+    font-weight: 200;
+}
+
+
+footer{
+     width: 100%;
+     max-width: var(--maxWidth);
+     margin: 0 auto;
+     height: 150px;
+     margin-top: 2rem;
+     background-color: var(--bgc-principal);
+     border-radius: var(--border-radius);
+     display: flex;
+     align-items: center;
+    color: white;
+    margin-bottom: 1.3rem;
+}
+
+footer .social-lieu-copyright{
+   /* border:1px solid black;*/
+    display:flex; 
+    justify-content: space-between;
+    width: 100%;
+    padding:0 1.5rem;
+   
+}
+
+.social li{
+  list-style: none;
+}
+
+.social li a{
+   text-decoration: none;
+   color: white;
+}
+
+
+.grand-titre{
+    font-size: 2rem;
+    font-weight: 700;
+    color:rgba(255, 255, 255, 0.467);
+}
+
+.droit{
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+.logo-blanc{
+    position: absolute;
+    width: 8%;
+    left: 53rem;
+    /*border: 1px solid black;*/
+}
+
+.logo-blanc svg{
+    fill: rgb(255, 255, 255);
+    width: 100%;
+}
