--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,15 +18,13 @@ body{
 height:100%; 
 }
 
-section{
-    margin-top: 15rem;
-}
+
 
 header{
     position: relative;
    /* background-color: rgba(223, 78, 78, 0.873);*/
     padding: 0 3rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,7 +78,6 @@ header{
 }
 
 .navbar .logo{
-    border: 1px solid black;
 position: absolute;
  width: 5%;
  top: 1rem;
@@ -91,15 +88,18 @@ left: 43rem;
    }
 
 main{
-margin-top: 3.4rem;
+margin: 1.5rem 2rem;
 display: flex;
 flex-direction: column;
+background-color: #00000049;
+border-radius:18px;
+padding: 2rem;
+margin-top: 2rem;
 }
-section{
-    margin-top: 20rem;
-}
+
 section h1{
-    font-size: 5rem;
+    font-size: 8rem;
+    color: #0f0f0f6f;
 }
 
 
@@ -125,11 +125,11 @@ section h1{
 
 .home .titre-portfolio{
     position: absolute;
-    font-size: 13.6rem;
-    left: 3rem;
-     top: 9.6rem;
-    color: #0000002d;
-    z-index: -1;
+    font-size: 14rem;
+    left: 1rem;
+     top: 10rem;
+    color: #ffffff26;
+    z-index: 1;
     border: none;
 }
 
@@ -208,12 +208,20 @@ border-radius: 10px;
   }
 
 .portfolio-section .projet-container article{
+  display: flex;
+  flex-direction: column;
+
+}
+.portfolio-section .projet-container article div{
     width: 600px;
     height: 500px;
     background-color: var(--bgc-principal);
-    border-radius:15px; 
+    border-radius: var(--border-radius);
 
 }
+
+
+
 
 .portfolio-section{
     position: relative; 
@@ -519,7 +527,7 @@ footer{
      margin: 0 auto;
      height: 150px;
      margin-top: 2rem;
-     background-color: var(--bgc-principal);
+     background-color:rgba(0, 0, 0, 0.84);
      border-radius: var(--border-radius);
      display: flex;
      align-items: center;
