--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,6 +3,7 @@
     --bgc-principal:rgba(0, 0, 0, 0.688); 
     --maxWidth: 1450px; 
     --border-radius: 15px;
+    --fontSize:8rem; 
 }
 
 *{
@@ -22,12 +23,13 @@ height:100%;
 
 header{
     position: relative;
-   /* background-color: rgba(223, 78, 78, 0.873);*/
+    background-color: rgba(223, 78, 78, 0.873);
     padding: 0 3rem;
     margin-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .navbar{
@@ -39,6 +41,7 @@ header{
     max-width: 1450px;
     height: 60px;
     position: fixed;
+    margin-top: 1.5rem;
 }
 
 .navbar li {
@@ -94,15 +97,33 @@ flex-direction: column;
 background-color: #00000049;
 border-radius:18px;
 padding: 2rem;
-margin-top: 2rem;
+margin-top: 4rem;
 }
 
 section h1{
-    font-size: 8rem;
+    font-size: var(--fontSize);
     color: #0f0f0f6f;
+    z-index: 2;
 }
+section h1::after{
+    content:"";
+    position: absolute;
+    background-color: #0f0f0f6f; 
+    width: 15px; 
+    height: 15px;
+    right: 0;
+    top: 7.5rem;
+}
+section h1:before{
+    content:"";
+    position: absolute;
+    background-color: #7474746f; 
+    width: 100%;
+    height: 3px;
+    top: 8rem;
+    left: 0.5rem;
 
-
+}
 
 .home{
    position: relative;
@@ -238,10 +259,6 @@ border-radius: 10px;
 
 }
 
-#projet-about{
-    position: absolute;
-    top: -6rem;
-}
 .portfolio-section .propos-container{
     width: 100%;
     height: 650px;
@@ -256,9 +273,8 @@ border-radius: 10px;
  position:absolute; 
  width: 100%; 
  left: -9rem;
- top: 1rem;   
+ top: 10rem;   
  display:grid;
- 
  grid-template-columns:repeat(2,400px); 
  justify-content:center;
  align-content: center;
@@ -351,25 +367,17 @@ border-radius: 10px;
     border-radius: var(--border-radius);
 
 }
-.contact-container h1{
+.contact-container h2{
     position: absolute;
     color:white; 
     top: 2.1rem;
+    font-size:  var(--fontSize);
 }
-/*.contact-container h1::after{
-    content: "";
-    position: absolute;
-    background-color: white;
-    width: 100%;
-    max-width: 1400px;
-    height: 0.5px;
 
-}
-*/
 
 .contact-mini{
     position: absolute;
-    margin-top: 10rem;
+    margin-top: 12rem;
     right: 1.5rem;
     width: 80%;
     height: 480px;
@@ -541,7 +549,6 @@ footer .social-lieu-copyright{
     justify-content: space-between;
     width: 100%;
     padding:0 1.5rem;
-   
 }
 
 .social li{
@@ -552,7 +559,6 @@ footer .social-lieu-copyright{
    text-decoration: none;
    color: white;
 }
-
 
 .grand-titre{
     font-size: 2rem;
