--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,10 +1,13 @@
 
 :root{
-    --bgc-principal:rgba(0, 0, 0, 0.688); 
+   
+    --bgc-mineur:#0a0a0aaf; 
     --maxWidth: 1450px; 
     --border-radius: 15px;
     --fontSize:8rem; 
-    --color:#0f0f0f6f;
+    --color:black;
+    --font-weight:500; 
+    
 }
 
 *{
@@ -93,7 +96,7 @@ main{
 
 display: flex;
 flex-direction: column;
-background-color: #00000049;
+/*background-color: #00000034;*/
 border-radius:22px;
 padding: 2rem;
 margin-top: 4rem;
@@ -108,16 +111,16 @@ section h1{
 section h1::after{
     content:"";
     position: absolute;
-    background-color: #0f0f0f6f; 
+   background-color: #000000; 
     width: 15px; 
     height: 15px;
-    right: 0;
-    top: 7.5rem;
+    right: -0.4rem;
+    top: 6.5rem;
 }
 section h1:before{
     content:"";
     position: absolute;
-    background-color: #7474746f; 
+    background-color: #000000; 
     width: 100%;
     height: 1px;
     top: 8rem;
@@ -127,7 +130,7 @@ section h1:before{
 
 .home{
    position: relative;
-   background-color: var(--bgc-principal);
+   /*background-color: var(--bgc-mineur);*/
     width: 100%;
     max-width: var(--maxWidth);
     margin: 0 auto;
@@ -149,7 +152,7 @@ section h1:before{
     font-size: 14rem;
     left: 1rem;
      top: 10rem;
-    color: #ffffff26;
+    color: #00000029;
     z-index: 1;
     border: none;
 } 
@@ -157,11 +160,12 @@ section h1:before{
 .paragraphe1{
     margin-top: 28rem;
    /* border: 1px solid black;*/
-    font-size: 2.6rem;
-    width: 50%;
+    font-size: 4rem;
+    width: 70%;
     margin-left: 6.4rem;
-    color:white; 
+    color:rgb(4, 4, 4); 
     z-index: 4;
+    font-weight: 500;
 }
 
 .paragraphe1::after{
@@ -193,21 +197,21 @@ section h1:before{
 position: absolute;
 font-size: 9rem;
 top: 2rem;
-font-weight:500;
+font-weight:var(--font-weight);
 }
 
 .home .link-contact{
 position: absolute;
-top: 23rem;
-border: 1px solid rgb(255, 255, 255);
-width: 10%;
-height: 45px;
+top: 25rem;
+border: 2px solid white;
+width: 15%;
+height: 55px;
 display: flex;
 justify-content: center;
 align-items: center;
-left: 57.4rem;
-border-radius: 10px;
-
+left: 56rem;
+border-radius: 15px;
+z-index: 3;
 }
 
 
@@ -218,8 +222,10 @@ border-radius: 10px;
 
 .home ul li a{
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
     color: white;
+
   }
   .portfolio-section .projet-container{
    display: flex;
@@ -236,7 +242,7 @@ border-radius: 10px;
 .portfolio-section .projet-container article div{
     width: 600px;
     height: 500px;
-    background-color: var(--bgc-principal);
+    background-color: var(--bgc-mineur);
     border-radius: var(--border-radius);
 
 }
@@ -269,8 +275,7 @@ article .portfolio{
 .portfolio-section .propos-container{
     width: 100%;
     height: 650px;
-    background-color: var(--bgc-principal);
-    border-radius:var(--border-radius); 
+
     max-width: 1200px;
 }
 
@@ -296,8 +301,8 @@ article .portfolio{
         position:absolute; 
         top: 4rem;
         left: 17rem;
-        border-top: 1px solid rgb(255, 255, 255);
-        border-left: 1px solid rgb(255, 255, 255);
+        border-top: 1px solid rgb(5, 3, 3);
+        border-left: 1px solid rgb(0, 0, 0);
         width: 20px;
         height: 20px;   
 }
@@ -305,8 +310,8 @@ article .portfolio{
 .grid::before{
         content:"";
         position:absolute; 
-        border-bottom: 1px solid white;
-        border-right: 1px solid white;
+        border-bottom: 1px solid rgb(0, 0, 0);
+        border-right: 1px solid rgb(0, 0, 0);
         top: 34rem;
         left: 72rem;
         width: 20px;
@@ -317,30 +322,44 @@ article .portfolio{
 
 .paragraphe{
     
-    border-top: 0.5px solid white;
+    border-top: 0.5px solid rgb(0, 0, 0);
     width: 400px;
     margin-top:6rem; 
-    color:white; 
+    color:rgb(0, 0, 0); 
     font-size: 1.4rem; 
-    font-weight: 200;
+    font-weight: 500;
     padding-top: 1rem;
 }
+.paragraphe .competence{
+    color: rgb(0, 0, 0);
+    border-bottom: 0.5px solid rgb(0, 0, 0);
+    padding-bottom: 1rem;
+}
+
 .skills-grid
 {
     border:1px solid  red;
     border: none;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     width: 14%;
     gap: 1rem;
+    margin-left: 4.4rem;
     
 
 }
+.skills{
+   font-size: 1rem;
+   margin-top: 1.5rem;
+}
 
-.skills .web{
-    font-weight: 500;
-    font-size: 1.5rem;
-    margin-top:1rem; 
+.groupe .web{
+    font-weight: var(--font-weight); 
+    font-size: 1.3rem;
+    margin-top: 1rem; 
+    margin-bottom: -1rem;
+
    /* border: 1px solid black; */
 
 }
@@ -370,13 +389,14 @@ border-radius: 10px;
 .portfolio-section .contact-container{
     width: 100%;
     height: 700px;
-    background-color: var(--bgc-principal);
+    /*background-color: var(--bgc-principal);*/
     border-radius: var(--border-radius);
+    background-color:var(--bgc-mineur);
 
 }
 .contact-container h2{
     position: absolute;
-    color:white; 
+    color:rgb(255, 255, 255); 
     top: 2.1rem;
     font-size:  var(--fontSize);
 }
@@ -384,7 +404,7 @@ border-radius: 10px;
 .contact-container h2::after{
     content:""; 
     position: absolute;
-    background-color: white;
+    background-color:#ffffff;
     width:1400px;
     height:1px;
     top: 8rem;
@@ -399,24 +419,25 @@ border-radius: 10px;
     width: 80%;
     height: 480px;
     border-radius: var(--border-radius);
-    background-color:rgba(0, 0, 0, 0.688);
     padding: 2rem; 
 }
 
 .contact-mini p{
-  color:white;
+  color:rgb(255, 255, 255);
   width: 35%;
-  font-weight: 200;
+  font-weight: var(--font-weight);
   font-size: 1.5rem;
   margin-top: 1rem;
+  margin-left: -3rem;
   border-top: 0.5px solid white;
   padding-top:1rem;  
+  z-index: 10;
 }
 .contact-mini p::after{
     content:"";
     position:absolute; 
     top: 1rem;
-    left: 1rem;
+    left: -2rem;
     border-top: 1px solid rgb(255, 255, 255);
     border-left: 1px solid rgb(255, 255, 255);
     width: 15px;
@@ -428,7 +449,7 @@ border-radius: 10px;
     content:"";
     position:absolute; 
     top: 14rem;
-    left: 23.5rem;
+    left: 24rem;
     border-bottom: 1px solid rgb(255, 255, 255);
     border-right: 1px solid rgb(255, 255, 255);
     width: 15px;
@@ -446,7 +467,7 @@ form{
 form label{
     color:white; 
     font-size: 1.6rem;
-    font-weight: 200;
+    font-weight:var(--font-weight);
     padding-top: 0.7rem ;
  }
 form input{
@@ -467,9 +488,10 @@ form button{
     font-size: 1rem; 
     font-weight: 500;
     margin-top:1rem; 
-    background-color:rgba(117, 117, 117, 0.752);
-    color:white;
+    background-color:white; 
+    color:rgba(0, 0, 0, 0.389);
     border-radius: 8px;
+    z-index: 10;
 
 }
 
@@ -478,8 +500,13 @@ form input:focus{
     outline: none;
     background:none; /* Assure la suppression de l'effet par défaut */
 }
+form input::placeholder{
+color: rgba(255, 255, 255, 0.458);
+font-weight: var(--font-weight);
+}
 .reseau{
     /*border:1px solid green; */
+    margin-left: -3.5rem;
     width: 100%;
     max-width: 510px;
     height: 50px;
@@ -494,11 +521,12 @@ form input:focus{
       text-decoration: none;
       color: rgb(255, 255, 255);
       font-size: 0.9rem;
+      font-weight: var(--font-weight);
   }
 
 
 .portfolio-section .menu-block{
-    background-color: var(--bgc-principal);
+    background-color: var(--bgc-mineur);
     border-radius:var(--border-radius);
     height: 400px;
     max-width: 990px;
@@ -552,7 +580,7 @@ footer{
      margin: 0 auto;
      height: 150px;
      margin-top: 2rem;
-     background-color:rgba(0, 0, 0, 0.84);
+     background-color:var(--bgc-mineur);
      border-radius: var(--border-radius);
      display: flex;
      align-items: center;
