--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,6 +22,7 @@ body{
 }
 
 header{
+   /* border: 1px solid rgb(0, 0, 0); */
     position: relative;
     padding: 0 3rem;
     margin-top: 1rem;
@@ -29,7 +30,6 @@ header{
     justify-content: center;
     align-items: center;
     z-index: 10;
-    border:1px solid red;
     width: 100%;
 }
 
@@ -38,7 +38,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid yellow;
+   /* border: 1px solid yellow;*/
     max-width: 1450px;
     height: 80px;
     top: 0;
@@ -61,6 +61,7 @@ header{
 .navbar .nav-links{
     display: flex;
     gap: 1rem;
+    
 }
 
 .nav-links a::after{
@@ -82,7 +83,6 @@ header{
 }
 
 .navbar .logo{
-border:1px solid black;
  width: 5%;
 }
 .navbar .logo img{
@@ -129,49 +129,55 @@ section h1:before{
     width: 100%; /* Assurez-vous que ces éléments prennent toute la largeur */
 }
 .home{
-   /*background-color: var(--bgc-mineur);*/
     width: 100%;
     margin: 0 auto;
     height:580px ;
-    border-radius: var(--border-radius);
+    display: flex;
+   flex-direction: column;
 }
 
 .home .home-container{
     /*background-color: rgb(0, 0, 255);*/
-    width: 100%;
     height:350px;
-    margin: 0 auto ;
-    margin-top:-10rem; 
+    width: 100%;
+    max-width: 1200px; /* Limite la largeur */
+    display: flex;
+    align-items: center;
 }
 
+.home-container .salut{ 
+font-size: 10rem;
+font-weight:var(--font-weight);
+}
+    
+
 .home .titre-portfolio{
+    margin-top: 8rem;
     text-align: center;
     font-size: 15.4rem;
-    position: relative;
-    top: 20rem;
     color: #00000029;
     z-index: 1; 
-    border: none;
-    border: 1px solid  black;
-    width: 100%;
+  /* border: 1px solid  black;   /* Centre horizontalement dans son conteneur parent */  
 } 
 
 .paragraphe1{
-    margin-top: 19.5rem;
-   /* border: 1px solid black;*/
-    font-size: 4rem;
-    width: 70%;
-    margin-left: 6.4rem;
+   /*border: 1px solid rgb(210, 0, 0); */
+   margin-left:8rem;
+   margin-top: 2rem;
+    font-size:3.4rem;
+    width: 80%;
     color:rgb(4, 4, 4); 
     z-index: 4;
     font-weight: 500;
+    position:relative; 
+    padding: 0 2rem;
 }
 
 .paragraphe1::after{
     content:"";
     position:absolute; 
-    top: 1rem;
-    left: 6rem;
+    top: 0rem;
+    left: 0rem;
     border-top: 1px solid rgb(0, 0, 0);
     border-left: 1px solid rgb(0, 0, 0);
     width: 20px;
@@ -184,31 +190,23 @@ section h1:before{
     position:absolute; 
     border-bottom: 1px solid rgb(0, 0, 0);
     border-right: 1px solid rgb(0, 0, 0);
-    top: 30rem;
-    left: 69rem;
+    bottom: 0rem;
+    right: 0;
     width: 20px;
     height: 20px;
 }
 
-
-
-.paragraphe1 .salut{
-font-size: 9rem;
-font-weight:var(--font-weight);
-}
-
 .home .link-contact{
-position: absolute;
-top: 29rem;
-background-color: black;
-width: 12%;
-height: 50px;
+margin-top: 2rem;
+width: 13%;
+display: inline-flex;
+border: 1px solid rgb(0, 0, 0); 
+padding:1rem;
 display: flex;
 justify-content: center;
 align-items: center;
 left: 54rem;
-border-radius: 15px;
-z-index: 3;
+border-radius: 10px;
 }
 
 
@@ -220,8 +218,7 @@ z-index: 3;
 .home ul li a{
     text-decoration: none;
     font-size: 1.1rem;
-    font-weight: 600;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 
   }
   .portfolio-section .projet-container{
@@ -229,9 +226,11 @@ z-index: 3;
    justify-content: space-between;
    width: 100%;
 
+
   }
 
 .portfolio-section .projet-container article{
+ position: relative;
   display: flex;
   flex-direction: column;
 
@@ -243,18 +242,22 @@ z-index: 3;
 
 }
 
-article .portfolio{
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: rgba(0, 0, 0, 0.543);
-    font-weight: 800;
-    border:var(--border-radius)
+article .portfolio a{
+    font-size: 3rem;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    transition:  color 0.4s;;
+}
+
+article .portfolio a:hover{
+   
+    color: rgba(0, 0, 0, 0.598);
 }
 
 
 
 
-.portfolio-section{
+.portfolio-section{ 
     position: relative; 
     width: 100%;
     max-width: 1450px;
@@ -266,23 +269,19 @@ article .portfolio{
     position: absolute;
     font-size:1rem;
     font-weight: 200;
+    
 
 }
 
 .portfolio-section .propos-container{
     width: 100%;
-    height: 650px;
-
-    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
 }
 
 
-.grid{
-   
- position:absolute; 
- width: 100%; 
- left: -9rem;
- top: 10rem;   
+.grid{ 
+ width: 100%;
  display:grid;
  grid-template-columns:repeat(2,400px); 
  justify-content:center;
@@ -292,33 +291,7 @@ article .portfolio{
 }
 
 
-.grid::after{
-   
-        content:"";
-        position:absolute; 
-        top: 4rem;
-        left: 17rem;
-        border-top: 1px solid rgb(5, 3, 3);
-        border-left: 1px solid rgb(0, 0, 0);
-        width: 20px;
-        height: 20px;   
-}
-    
-.grid::before{
-        content:"";
-        position:absolute; 
-        border-bottom: 1px solid rgb(0, 0, 0);
-        border-right: 1px solid rgb(0, 0, 0);
-        top: 34rem;
-        left: 72rem;
-        width: 20px;
-        height: 20px;
-}
-    
-    
-
 .paragraphe{
-    
     border-top: 0.5px solid rgb(0, 0, 0);
     width: 400px;
     margin-top:6rem; 
@@ -328,6 +301,7 @@ article .portfolio{
     padding-top: 1rem;
 }
 .paragraphe .competence{
+
     color: rgb(0, 0, 0);
     border-bottom: 0.5px solid rgb(0, 0, 0);
     padding-bottom: 1rem;
@@ -361,17 +335,16 @@ article .portfolio{
 
 }
 .cv{
-position: absolute;
-top: 30rem;
-border: 1px solid rgb(255, 255, 255);
+border: 1px solid rgb(0, 0, 0);
 width: 10%;
 height: 45px;
 display: flex;
 justify-content: center;
 align-items: center;
-left: 18.4rem;
 border-radius: 10px;
 }
+
+
 
 .cv li{
     list-style: none;
@@ -379,8 +352,15 @@ border-radius: 10px;
 .cv li a{
     text-decoration: none;
     font-size: 1.1rem;
-    color: white;
+    color: rgb(0, 0, 0);
+    transition:     ;
 }
+
+
+
+
+
+
 .portfolio-section .contact{
     padding: 3rem 1rem;
     display: flex;
@@ -412,15 +392,13 @@ border-radius: 10px;
     content:""; 
     position: absolute;
     background-color:#ffffff;
-    width:1400px;
+   width: 787px;
     height:1px;
     top: 8rem;
     left: 1rem;
-}
-
-
-.contact-mini{
     
+}
+.contact-mini{ 
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
@@ -474,7 +452,7 @@ form button{
     font-weight: 500;
     margin-top:1rem; 
     background-color:white; 
-    color:rgba(0, 0, 0, 0.389);
+    color:#0a0a0ad0;
     border-radius: 8px;
     z-index: 10;
 
@@ -507,20 +485,26 @@ font-weight: var(--font-weight);
       font-weight: var(--font-weight);
   }
 
-
+.portfolio-section .menu{
+    padding:2rem; 
+}
 .portfolio-section .menu-block{
+    display: flex;
+    justify-content: left;
+    align-items: center;
     height: 400px;
     max-width: 990px;
 }
 
 .menu-block .links-block{
-    position: absolute;
-    right: 45rem;
-    top: 14.6rem;
+display: flex;
+justify-content:left; 
+flex-direction: column;
 }
 
 .links-block li{
     list-style: none;
+    position: relative;
 }
 .links-block li::after{
     position:absolute; 
@@ -556,7 +540,7 @@ font-weight: var(--font-weight);
 
 
 footer{
-     width: 100%;
+     width: 92%;
      max-width: var(--maxWidth);
      margin: 0 auto;
      height: 150px;
@@ -573,7 +557,7 @@ footer .social-lieu-copyright{
    /* border:1px solid black;*/
     display:flex; 
     justify-content: space-between;
-    width: 100%;
+    width: 90%;
     padding:0 1.5rem;
 }
 
@@ -605,4 +589,13 @@ footer .social-lieu-copyright{
 .logo-blanc svg{
     fill: rgb(255, 255, 255);
     width: 100%;
+}
+
+.portfolio-photo{
+   text-align:center;
+}
+
+
+.portfolio-photo h1{
+ font-size: 13rem;
 }
