--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -290,7 +290,7 @@ article .portfolio a:hover{
 
 
 .grid{ 
-    margin-left: 30rem;
+margin-left: 30rem;
 /*border:1px solid blue;*/
  width: 70%;
  display:grid;
@@ -349,7 +349,7 @@ article .portfolio a:hover{
 .cv{
 margin-left:20rem ;
 border: 1px solid rgb(0, 0, 0);
-width: 10%;
+width: 180px;
 height: 45px;
 display: flex;
 justify-content: center;
@@ -366,7 +366,6 @@ border-radius: 10px;
     text-decoration: none;
     font-size: 1.1rem;
     color: rgb(0, 0, 0);
-    transition:     ;
 }
 
 
@@ -569,6 +568,7 @@ footer{
 footer .social-lieu-copyright{
    /* border:1px solid black;*/
     display:flex; 
+    align-items: center;
     justify-content: space-between;
     width: 90%;
     padding:0 1.5rem;
@@ -618,22 +618,33 @@ footer .social-lieu-copyright{
 /*---- BURGER-MENU---- */
 .burger-menu{
     position:absolute; 
-    /* display: none;  */
+    height: 0;
+    display: none;  
     top: -0.9rem;
     width: 300px; 
     z-index: 3;
 }
 
 .burger-menu .nav-links{
+    border-left:0.5px solid black;
     display: flex;
     flex-direction: column;
+    margin-left: 2.5rem;
+    padding-left: 1rem;
 }
 
 
 .burger-menu .nav-links li a{
    font-size: 4rem;
   }
+  .burger-menu .indicateur{
+    position: absolute;
+    left: 1rem;
+    bottom: 2rem;
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.389);
 
+  }
 
 
 /*------------- RESPONSIVE --------------*/
@@ -650,7 +661,7 @@ footer .social-lieu-copyright{
     }
 
     .burger-menu {
-       background-color: rgb(145, 145, 145);
+       background-color: rgb(214, 214, 214);
         display: flex;
         align-items: center;
         margin: 0 auto ;
@@ -659,14 +670,37 @@ footer .social-lieu-copyright{
     }
 
 
+}
+/*---Responsive section h1 ----*/
 
+@media (max-width:768px){
+    section h1{
+        font-size: 4rem;
+    }
+
+    section h1::after{
+       display: none;
+    }
+    section h1::before{
+        display: none;
+     }
+
+
+     .portfolio-section .projet-container{
+        
+        display: flex;
+        flex-direction: column;
+
+     }
 }
 
 
 
 
-@media (max-width: 768px) {
+
+@media (max-width: 980px) {
     .home {
+        margin-top:50rem;
         height: auto; /* Ajuste la hauteur automatiquement */
         padding: 2rem;
     }
@@ -682,7 +716,7 @@ footer .social-lieu-copyright{
     }
 
     .home .titre-portfolio {
-        font-size: 8rem; /* Réduit la taille */
+        font-size: 7rem; /* Réduit la taille */
         margin-top: 4rem;
     }
 
@@ -708,7 +742,7 @@ footer .social-lieu-copyright{
     }
 
     .home .titre-portfolio {
-        font-size: 6rem; /* Taille encore plus réduite */
+        font-size: 7em; /* Taille encore plus réduite */
         margin-top: 2rem;
     }
 
@@ -719,12 +753,65 @@ footer .social-lieu-copyright{
     }
 
     .home .link-contact {
-        width: 100%;
-        padding: 0.6rem;
+        width: 70%;
+        padding: 1.5rem 0;
         justify-content: center;
         margin: 1rem 0;
+        border-radius: 5px;
+
     }
 }
 
+
+
+/*---Responsive section h1 ----*/
+
+@media (max-width:980px){
+    section h1{
+        font-size: 4rem;
+    }
+
+    section h1::after{
+       display: none;
+    }
+    section h1::before{
+        display: none;
+     }
+/*--- Responsive-projet-container ----*/
+
+     .portfolio-section .projet-container,
+     .portfolio-section .propos-container .grid{
+        display: flex;
+        flex-direction: column;
+
+     }
+   .grid{
+        margin-left:0rem; 
+     }
+
+     .cv{
+        margin-top: 2rem;
+        margin-left: 0;
+     }
+
+     .cv li a{
+        font-size:1rem; 
+     }
+      
+     .contact-container h2{
+        font-size: 4rem;
+        margin-left: 0;
+     }
+     .contact-container h2::after{
+        display: none;
+     }
+     
+     .contact-container h2::before{
+        display: none;
+     }
+
+    }
+     
+    
 
 
