--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -436,7 +436,7 @@ form {
     margin-top: -10rem;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 25rem;
 
 }
 form label{
@@ -505,7 +505,7 @@ font-weight: var(--font-weight);
     justify-content: left;
     align-items: center;
     height: 400px;
-    max-width: 990px;
+    /*border: 1px solid black;*/
 }
 
 .menu-block .links-block{
@@ -526,8 +526,9 @@ flex-direction: column;
     background-color: rgb(0, 0, 0);
     left:1rem; 
     margin-top: 3.5rem;
- }
- links-block li::before{
+
+}
+ /*links-block li::before{
     position:absolute; 
     content:"";
     height:0.4px; 
@@ -535,7 +536,7 @@ flex-direction: column;
     background-color: rgb(0, 0, 0);
     left:1rem; 
     margin-top: 3.5rem;
- }
+ }*/
 
 .links-block li a{
     text-decoration: none;
@@ -569,11 +570,14 @@ footer .social-lieu-copyright{
    /* border:1px solid black;*/
     display:flex; 
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
-    width: 90%;
+    width: 100%;
     padding:0 1.5rem;
 }
-
+footer .social-lieu-copyright .social{
+    margin-top: 1.3rem;
+}
 .social li{
   list-style: none;
 }
@@ -581,6 +585,7 @@ footer .social-lieu-copyright{
 .social li a{
    text-decoration: none;
    color: white;
+   font-size:1.1rem;
 }
 
 .grand-titre{
@@ -698,7 +703,7 @@ footer .social-lieu-copyright{
 
 
 
-@media (max-width: 980px) {
+@media (max-width: 768px) {
     .home {
         margin-top:50rem;
         height: auto; /* Ajuste la hauteur automatiquement */
@@ -749,6 +754,7 @@ footer .social-lieu-copyright{
     .paragraphe1 {
         font-size: 1.6rem; /* Plus petit */
         padding: 0;
+        width: 100%;
         text-align: justify; /* Justifie le texte pour améliorer la lisibilité */
     }
 
@@ -765,64 +771,140 @@ footer .social-lieu-copyright{
 
 
 /*---Responsive section h1 ----*/
+@media (max-width: 980px) {
 
-@media (max-width:980px){
-    section h1{
+    /* Section Header */
+    section h1 {
         font-size: 4rem;
     }
 
-    section h1::after{
-       display: none;
-    }
-    section h1::before{
+    section h1::after,
+    section h1::before {
         display: none;
-     }
-/*--- Responsive-projet-container ----*/
+    }
 
-     .portfolio-section .projet-container,
-     .portfolio-section .propos-container .grid{
+    /* Responsive Projet & Propos Containers */
+    .portfolio-section .projet-container,
+    .portfolio-section .propos-container .grid {
         display: flex;
         flex-direction: column;
+    }
 
-     }
-   .grid{
-        margin-left:0rem; 
-     }
+    .grid {
+        margin-left: 0;
+    }
 
-     .cv{
+    /* CV Section */
+    .cv {
         margin-top: 2rem;
         margin-left: 0;
-     }
+    }
 
-     .cv li a{
-        font-size:1rem; 
-     }
-      
-     .contact-container{
+    .cv li a {
+        font-size: 1rem;
+    }
+
+    /* Contact Container */
+    .contact-container {
         display: block;
-     }
+        height: 880px;
+    }
 
-     .contact-container .contact-mini form{
-        margin-left: 10rem; 
-     }
-
-
-
-
-     .contact-container h2{
+    .contact-container h2 {
         font-size: 4rem;
         margin-left: 0;
-     }
-     .contact-container h2::after{
-        display: none;
-     }
-     
-     .contact-container h2::before{
-        display: none;
-     }
-
     }
-     
+
+    .contact-container h2::after,
+    .contact-container h2::before {
+        display: none;
+    }
+
+    /* Contact Mini Section */
+    .contact-mini {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .contact-mini p,
+    .contact-mini form {
+        margin-left: 0;
+    }
+
+    .contact-mini p {
+        width: 85%;
+    }
+
+    .contact-mini form {
+        margin-top:35px;
+    }
+
+    .reseau{
+        margin-top:-64px;
+        display: flex;
+        flex-direction: column;
+    }
+
+     /*Menu */
+
+     .links-block li::after{
+       display: none;
+    }
+
+}
+   
+@media (max-width: 768px) {
+    footer {
+        flex-direction: column;
+        padding: 2rem 1rem;
+    }
+
+    
+
+    footer .social-lieu-copyright .social {
+        justify-content: center;
+        margin-top: 1rem;
+    }
+
+    .grand-titre {
+        font-size: 1.8rem;
+    }
+
+    .droit {
+        font-size: 1.2rem;
+    }
+
+    .logo-blanc {
+        width: 15%; /* Réduit encore la taille du logo */
+    }
+
+    .social li a {
+        font-size: 1rem; /* Réduit légèrement la taille de la police */
+    }
+}
+
+@media (max-width: 480px) {
+    footer {
+        padding: 1.5rem 1rem;
+    }
+
+    .grand-titre {
+        font-size: 1.5rem;
+    }
+
+    .droit {
+        font-size: 1rem;
+    }
+
+    .logo-blanc {
+        width: 20%;
+    }
+
+    .social li a {
+        font-size: 0.9rem;
+    }
+}
     
 
 
