--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -160,7 +160,7 @@ font-weight:var(--font-weight);
 .home .titre-portfolio{
     margin-top: 8rem;
     text-align: center;
-    font-size: 15.4rem;
+    font-size: 15vw;
     color: #00000029;
     z-index: 1; 
   /* border: 1px solid  black;   /* Centre horizontalement dans son conteneur parent */  
@@ -620,12 +620,12 @@ footer .social-lieu-copyright .social{
 }
 
 
-/*---- BURGER-MENU---- */
+/*----BURGER-MENU---- */
 .burger-menu{
     position:absolute; 
     height: 0;
     display: none;  
-    top: -0.9rem;
+    top: -10rem;
     width: 300px; 
     z-index: 3;
 }
@@ -653,7 +653,7 @@ footer .social-lieu-copyright .social{
 
 
 /*------------- RESPONSIVE --------------*/
-@media  (max-width:980px){
+@media  (max-width:768px){
    
     .navbar .link-home,
     .navbar .nav-links{
@@ -700,9 +700,6 @@ footer .social-lieu-copyright .social{
 }
 
 
-
-
-
 @media (max-width: 768px) {
     .home {
         margin-top:50rem;
@@ -721,7 +718,7 @@ footer .social-lieu-copyright .social{
     }
 
     .home .titre-portfolio {
-        font-size: 7rem; /* Réduit la taille */
+        font-size: vw; /* Réduit la taille */
         margin-top: 4rem;
     }
 
@@ -747,7 +744,7 @@ footer .social-lieu-copyright .social{
     }
 
     .home .titre-portfolio {
-        font-size: 7em; /* Taille encore plus réduite */
+        font-size: 7vw; /* Taille encore plus réduite */
         margin-top: 2rem;
     }
 
@@ -857,13 +854,14 @@ footer .social-lieu-copyright .social{
 @media (max-width: 768px) {
     footer {
         flex-direction: column;
-        padding: 2rem 1rem;
+        height: 100%;
     }
 
     
 
-    footer .social-lieu-copyright .social {
-        justify-content: center;
+    footer .social-lieu-copyright{
+        display: flex;
+         flex-direction: column;
         margin-top: 1rem;
     }
 
